CommandLineParser - convert URL() constructors into URI.create() factory calls